# assistant-micro-entreprise

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agent/: __main__.py  calendar_manager.py  cli.py  database.py  documents.py  email_sender.py  llm.py  memory.py  profile.py  rag.py  tools.py
api/: deps.py  main.py  models.py
api/routers/: auth.py  chat.py  documents.py  echeances.py  profil.py  sidebar.py
docs/: guide-utilisateur.md
frontend/: Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  DocumentsCard.tsx  EcheancesCard.tsx  ErrorBanner.tsx  LoadingBubble.tsx  LoginPage.tsx  MessageBubble.tsx  ProfilCard.tsx  Sidebar.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChat.ts  useSidebar.ts
frontend/src/types/: index.ts
knowledge/: SOURCES.md  STANDARDS.md  TEMPLATES.md
scripts/: config.py  embedding.py  eurlex_client.py  ingest.py  legifrance_client.py  pdf_client.py  qdrant_loader.py  validate_packs.py
templates/: administratif.md  confirmation.md  devis.md  facture.md
tests/: conftest.py  test_calendar.py  test_documents.py  test_embedding.py  test_ingest_utils.py  test_llm.py  test_memory.py  test_profile.py  test_qdrant_loader.py  test_rag.py  test_tools.py
